@@ -1,19 +1,21 @@
 package com.epam.esm.exception;
 
+import org.postgresql.util.PSQLException;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.context.support.ResourceBundleMessageSource;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
+import org.springframework.http.converter.HttpMessageNotReadableException;
 import org.springframework.web.bind.annotation.ControllerAdvice;
 import org.springframework.web.bind.annotation.ExceptionHandler;
 
-import java.util.Arrays;
+import java.net.ConnectException;
 import java.util.List;
 import java.util.Locale;
 
 @ControllerAdvice
 public class ExceptionControllerAdviser {
-    private static final List<String> AVAILABLE_LOCALES = Arrays.asList("en_US", "ru_RU");
+    private static final List<String> AVAILABLE_LOCALES = List.of("en_US", "ru_RU");
     private static final Locale DEFAULT_LOCALE = new Locale("en", "US");
     private final ResourceBundleMessageSource bundleMessageSource;
 
@@ -22,11 +24,24 @@ public class ExceptionControllerAdviser {
         this.bundleMessageSource = messages;
     }
 
-
     @ExceptionHandler(EntityException.class)
     public ResponseEntity<ExceptionResponse> handleEntityNotFoundException(EntityException e, Locale locale) {
-        return buildErrorResponse(resolveResourceBundle(getMessageByCode(e.getErrorCode()), locale), e.getErrorCode(),
-                HttpStatus.BAD_REQUEST);
+        return buildErrorResponse(resolveResourceBundle(getMessageByCode(e.getErrorCode()), locale), e.getErrorCode()
+        );
+    }
+
+    @ExceptionHandler({HttpMessageNotReadableException.class, NumberFormatException.class})
+    public ResponseEntity<ExceptionResponse> handleMessageNotReadableException(Locale locale) {
+        int errorCode = ExceptionCode.ERROR_INPUT_DATA.getErrorCode();
+        return buildErrorResponse(resolveResourceBundle(getMessageByCode(errorCode), locale), errorCode
+        );
+    }
+
+    @ExceptionHandler({PSQLException.class, ConnectException.class})
+    public ResponseEntity<ExceptionResponse> handleDataBaseException(Locale locale) {
+        int errorCode = ExceptionCode.CONNECTION_DATABASE_ERROR.getErrorCode();
+        return buildErrorResponse(resolveResourceBundle(getMessageByCode(errorCode), locale), errorCode
+        );
     }
 
     private String resolveResourceBundle(String key, Locale locale) {
@@ -36,13 +51,12 @@ public class ExceptionControllerAdviser {
         return bundleMessageSource.getMessage(key, null, locale);
     }
 
-    private ResponseEntity<ExceptionResponse> buildErrorResponse(String message, Integer code, HttpStatus status) {
+    private ResponseEntity<ExceptionResponse> buildErrorResponse(String message, Integer code) {
         ExceptionResponse exceptionResponse = new ExceptionResponse(message, code);
-        return new ResponseEntity<>(exceptionResponse, status);
+        return new ResponseEntity<>(exceptionResponse, HttpStatus.BAD_REQUEST);
     }
 
     private String getMessageByCode(int errorCode) {
         return "error_msg." + errorCode;
     }
-
 }
